--- a/AuPairPlacementSystem/pom.xml
+++ b/AuPairPlacementSystem/pom.xml
@@ -21,5 +21,15 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>6.0.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ar.com.fdvs</groupId>
+  		<artifactId>DynamicJasper</artifactId>
+  		<version>5.1.1</version>
+	</dependency>
   </dependencies>
 </project>
