--- a/AuPairPlacementSystem/pom.xml
+++ b/AuPairPlacementSystem/pom.xml
@@ -22,6 +22,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+	 <groupId>javax.mail</groupId>
+	 <artifactId>mail</artifactId>
+	 <version>1.4.3</version>
+    </dependency>
+    <dependency>
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
   		<version>6.0.6</version>
