--- a/AuPairPlacementSystem/pom.xml
+++ b/AuPairPlacementSystem/pom.xml
@@ -36,5 +36,10 @@
   		<artifactId>DynamicJasper</artifactId>
   		<version>5.1.1</version>
 	</dependency>
+	<dependency>
+    <groupId>de.svenkubiak</groupId>
+    <artifactId>jBCrypt</artifactId>
+    <version>0.4.1</version>
+</dependency>
   </dependencies>
 </project>
